--- a/components/easy.html
+++ b/components/easy.html
@@ -38,8 +38,7 @@
         </a>
         <!-- Botones -->
         <div>
-            <a href="../index.html#service" class="btn btn-outline-primary">Inicio</a>
-            <a href="../index.html#contact" class="btn btn-primary">Contactame</a>
+            <a href="../index.html" class="btn btn-outline-primary">Inicio</a>
         </div>
     </div>
     <!-- Navbar End -->
