--- a/components/about.html
+++ b/components/about.html
@@ -6,7 +6,7 @@
         </div>
         <div class="row align-items-center">
             <div class="col-lg-5 pb-4 pb-lg-0">
-                <img class="img-fluid rounded w-100" src="../img/about1.jpg" alt="Acerca de mí">
+                <img class="img-fluid rounded w-100" src="img/about1.jpg" alt="Acerca de mí">
             </div>
             <div class="col-lg-7">
                 <h3 class="mb-4">Especialista en garantía en pruebas de software.</h3>
