--- a/components/service.html
+++ b/components/service.html
@@ -4,7 +4,6 @@
             <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Work</h1>
             <h1 class="position-absolute text-uppercase text-primary">Experiencia</h1>
         </div>
-
         <div class="row">
             <!-- Su Red -->
             <div class="col">
@@ -12,10 +11,8 @@
                     <i class="fa fa-2x fa-laptop-code"></i>
                     <h4>Su Red</h4>
                     <p>Analista Funcional de Pruebas</p>
-                    <a href="#" class="open-modal" data-url="sured.html" data-toggle="modal" data-target="#myModal">Leer
-                        más</a>
+                    <a href="../pages/sured.html">Leer más</a>
                 </div>
-
             </div>
 
             <!-- Ingenian Software -->
@@ -24,7 +21,7 @@
                     <i class="fa fa-2x fa-edit"></i>
                     <h4>Ingenian Software</h4>
                     <p>Documentadora - Ingeniera de pruebas</p>
-                    <a href="#" class="open-modal"  data-toggle="modal" data-target="#myModal">Leer más</a>
+                    <a href="../pages/ingenian.html">Leer más</a>
                 </div>
             </div>
 
@@ -34,8 +31,7 @@
                     <i class="fa fa-2x fa-search"></i>
                     <h4>MO Tecnologías</h4>
                     <p>Qa Engineer - Qa Manager</p>
-                    <a href="#" class="open-modal" data-url="MOTec.html" data-toggle="modal" data-target="#myModal">Leer
-                        más</a>
+                    <a href="../pages/motec.html">Leer más</a>
                 </div>
             </div>
 
@@ -45,8 +41,7 @@
                     <i class="fab fa-2x fa-android"></i>
                     <h4>Rappi</h4>
                     <p>Software Qa Tester</p>
-                    <a href="#" class="open-modal" data-url="rappi.html" data-toggle="modal" data-target="#myModal">Leer
-                        más</a>
+                    <a href="../pages/rappi.html">Leer más</a>
                 </div>
             </div>
 
@@ -56,8 +51,7 @@
                     <i class="fab fa-2x fa-apple"></i>
                     <h4>Prodigious Latin America</h4>
                     <p>Senior Functional Qa Analyst</p>
-                    <a href="#" class="open-modal" data-url="prodigious.html" data-toggle="modal"
-                        data-target="#myModal">Leer más</a>
+                    <a href="../pages/prodigious.html">Leer más</a>
                 </div>
             </div>
 
@@ -67,8 +61,7 @@
                     <i class="fa fa-2x fa-laptop"></i>
                     <h4>Tata Consultancy Services</h4>
                     <p>Senior Tester</p>
-                    <a href="#" class="open-modal" data-url="tata.html" data-toggle="modal" data-target="#myModal">Leer
-                        más</a>
+                    <a href="../pages/tata.html">Leer más</a>
                 </div>
             </div>
 
@@ -78,57 +71,9 @@
                     <i class="fa fa-2x fa-laptop-code"></i>
                     <h4>Easy Solutions</h4>
                     <p>Qa Tester</p>
-                    <a href="#" class="open-modal" data-url="easy.html" data-toggle="modal" data-target="#myModal">Leer
-                        más</a>
+                    <a href="../pages/easy.html">Leer más</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!-- Modal HTML -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="myModalLabel">Detalles</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <!-- Contenido del modal -->
-                <img class="img-fluid" src="../img/logos/sured.png" alt="Logo Mo">
-                <h1>ANALISTA FUNCIONAL</h1>
-                <h5><strong>Jul. 2024 | Actualidad</strong></h5><br>
-                <h3>Funciones destacadas:</h3><br>
-                <p><strong>Recolección y documentación de requisitos funcionales.</strong></p>
-                <p><strong>Creación de historias de usuario con los requisitos funcionales.</strong></p>
-                <p><strong>Ejecución de pruebas de usabilidad y pruebas de aceptación.</strong></p><br>
-
-                <h1>ANALISTA DE PRUEBAS JUNIOR</h1>
-                <h5><strong>Ene. 2024 | Jul. 2024</strong></h5><br>
-                <h3>Funciones destacadas:</h3><br>
-                <p><strong>Creación y ejecución de pruebas funcionales y regresión.</strong></p>
-                <p><strong>Creación y ejecución de pruebas de rendimiento, seguridad (a nivel de logs, base de datos en MySQL y configuraciones de las aplicaciones), usabilidad y aceptación.</strong></p>
-                <p><strong>Ejecución de pruebas funcionales en dispositivos móviles utilizando CrossBrowsing.</strong></p>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<!-- Script para cargar contenido en el modal -->
-<script>
-  $('#myModal').on('show.bs.modal', function (event) {
-    var modal = $(this);
-    modal.find('#modal-frame').attr('src', 'sured.html');
-});
-
-</script>
-<style>
-    .modal-body {
-        max-height: 500px; /* Altura máxima */
-        max-width: 700px;
-        overflow-y: auto;  /* Scroll habilitado */
-    }
-</style>
