--- a/components/works/sured.html
+++ b/components/works/sured.html
@@ -27,7 +27,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="plugins/cubeportfolio/css/cubeportfolio.min.css">
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../../css/style.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51">
@@ -53,14 +53,13 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0" style="text-align: center;">
-                    <img class="img-fluid rounded-circle shadow-sm" src="../img/logos/rappi.png" alt="">
+                    <img class="img-fluid rounded-circle shadow-sm" src="../../img/logos/sured.png" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">
                         Experiencia: </h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Pruebas funcionales, Plataformas web, Aplicaciones móviles,
-                        Microservicios, Bases de datos,MySQL, Calidad del software, Metodologías ágiles, Scrum</div>
+                    <div class="typed-text d-none">Pruebas funcionales, Canales Alto, Pruebas corporativas, ALM (Quality Center), Calidad en procesos de pruebas</div>
                 </div>
             </div>
         </div>
@@ -69,57 +68,65 @@
     <!-- Qualification Start -->
     <!-- Qualification Start -->
     <div class="container-fluid py-5" id="qualification">
-        <div class="container-fluid py-5" id="qualification">
-            <div class="container">
-                <h3 class="mb-2">SOFTWARE QA TESTER</h3>
-                <p class="mb-2"><strong>May. 2019 | Oct. 2019</strong></p><br><br>
-                <h3>Funciones destacadas:</h3><br>
-                <div class="row align-items-center">
-                    <div class="col-lg-6"></div>
-                    <div class="border-left border-primary pt-2 pl-4 ml-2">
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <p class="mb-2"><strong>Experiencia sólida en pruebas funcionales para plataformas web y
-                                    móviles, con énfasis en aplicaciones con integraciones complejas.</strong></p>
-                        </div>
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <p class="mb-2"><strong>Verificación de estructuras de archivos (JSON, XML, API y
-                                    Microservicios) en bases de datos como MySQL para pruebas de backend. </strong></p>
-                            </p>
-                        </div>
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <p class="mb-2"><strong>Ejecución exitosa en entornos de producción y desarrollo,
-                                    garantizando la estabilidad y funcionalidad continua de las aplicaciones.</strong>
-                            </p>
-                        </div>
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <p class="mb-2"><strong>Ejecución de pruebas smoke, aceptación, productivas, caja negra y
-                                    caja blanca, cubriendo distintos aspectos de la calidad del software.</strong></p>
-                        </div>
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <p class="mb-2"><strong>Participación activa en la implementación de metodologías ágiles,
-                                    especialmente Scrum, para mejorar la eficiencia y entrega de proyectos.</strong></p>
-                        </div>
+        <div class="container">
+            <h3 class="mb-2">SENIOR TESTER </h3>
+            <p class="mb-2"><strong>Jul. 2015 | Ago. 2017</strong></p><br><br>
+            <h3>Funciones destacadas:</h3><br>
+            <div class="row align-items-center">
+                <div class="col-lg-6"></div>
+                <div class="border-left border-primary pt-2 pl-4 ml-2">
+                    <div class="position-relative mb-4">
+                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                        <p class="mb-2"><strong>Creación y ejecución de pruebas funcionales en plataformas Java Web para canales Alto, Flexcube DDA y pruebas corporativas para el banco Citibank.</strong></p>
+                    </div>
+                    <div class="position-relative mb-4">
+                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                        <p class="mb-2"><strong>Elaboración de manuales corporativos.</strong></p>
+                        </p>
+                    </div>
+                    <div class="position-relative mb-4">
+                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                        <p class="mb-2"><strong>Gestión de defectos y casos de pruebas utilizando ALM (Quality Center) para mantener la calidad en los procesos de pruebas. </strong></p>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                </div>
+            </div>
+            <div class="col-lg-6">
             </div>
         </div>
     </div>
     <!-- Qualification End -->
     <!-- Footer Start -->
-    <div id="footer-container"></div>
-    <!-- Footer End -->
+    <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5" id="footer">
+        <div class="container">
+            <div class="container text-center py-5">
+                <div class="d-flex justify-content-center mb-2">
+                    <a class="btn btn-light btn-social mr-2"
+                        href="https://www.facebook.com/katalinasilvestre?mibextid=ZbWKwL" target="_blank"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/catalinasilvestre/"
+                        target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-light btn-social mr-2"
+                        href="https://www.instagram.com/kathasgut?igsh=MWhrb2MzaWR2ZHVycg==" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
+                    <a class="btn btn-light btn-social mr-2"
+                        href="https://www.tiktok.com/@katalinasilvestre?_t=8sItff0791y&_r=1" target="_blank"><i
+                            class="fab fa-tiktok"></i></a>
+                </div>
+                <div class="d-flex justify-content-center mb-3">
+                    <a class="text-white" href="#about">Acerca </a>
+                    <span class="px-3">|</span>
+                    <a class="text-white" href="#qualification">Educación</a>
+                    <span class="px-3">|</span>
+                    <a class="text-white" href="#service">Experiencia</a>
+                    <span class="px-3">|</span>
+                    <a class="text-white" href="#skill">Habilidades</a>
+                </div>
+                <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">2024</a>. Todos los derechos
+                    reservados y
+                    diseñado por Catalina Silvestre Gutiérrez</p>
+            </div>
+        </div>
+    </div>    <!-- Footer End -->
     <!-- Scroll to Bottom -->
     <i class="fa fa-2x fa-angle-down text-white scroll-to-bottom"></i>
     <!-- Back to Top -->
@@ -142,5 +149,4 @@
     <script src="../js/modal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
