--- a/components/works/ingenian.html
+++ b/components/works/ingenian.html
@@ -27,13 +27,13 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="plugins/cubeportfolio/css/cubeportfolio.min.css">
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../../css/style.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51">
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
-        <a href="../index.html" class="navbar-brand ml-lg-3">
+        <a href="../../index.html" class="navbar-brand ml-lg-3">
             <h1 class="m-0 display-5"><span class="text-primary">CSG</span>Folio</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -43,7 +43,7 @@
             <div class="navbar-nav m-auto py-0">
                 <a href="#home" class="nav-item nav-link active"></a>
             </div>
-            <a href="../index.html" class="btn btn-outline-primary d-none d-lg-block">Inicio</a>
+            <a href="../../index.html" class="btn btn-outline-primary d-none d-lg-block">Inicio</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -53,13 +53,15 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0" style="text-align: center;">
-                    <img class="img-fluid rounded-circle shadow-sm" src="../img/logos/ingenian.png" alt="">
+                    <img class="img-fluid rounded-circle shadow-sm" src="../../img/logos/ingenian.png" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">
                         Experiencia: </h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Requisitos del software, Diseño de planes de pruebas, Ejecución de planes de pruebas, Calidad de entregables, Apoyo técnico, Interventoría, Calidad de software, Gestión documental</div>
+                    <div class="typed-text d-none">Requisitos del software, Diseño de planes de pruebas, Ejecución de
+                        planes de pruebas, Calidad de entregables, Apoyo técnico, Interventoría, Calidad de software,
+                        Gestión documental</div>
                 </div>
             </div>
         </div>
@@ -75,7 +77,8 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <br><br><br><br><br><br><br><br><h3 class="mb-2">INGENIERA DE PRUEBAS</h3>
+                    <br><br><br><br><br><br><br><br>
+                    <h3 class="mb-2">INGENIERA DE PRUEBAS</h3>
                     <p class="mb-2"><strong>Octubre de 2018 | Mayo de 2019</strong></p><br>
                     <h3>Funciones destacadas:</h3><br>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
@@ -92,21 +95,22 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <p class="mb-2"><strong>Comunicación clara de errores detectados durante las pruebas.</strong>
+                            <p class="mb-2"><strong>Comunicación clara de errores detectados durante las
+                                    pruebas.</strong>
                             </p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
                             <p class="mb-2"><strong>Verificación de la calidad de los entregables y provisión de
-                                conceptos técnicos sobre la calidad del producto.</strong>
+                                    conceptos técnicos sobre la calidad del producto.</strong>
                             </p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
                             <p class="mb-2"><strong>Apoyo al equipo de Interventoría con conceptos técnicos sobre
-                                calidad de software y metodología.</strong>
+                                    calidad de software y metodología.</strong>
                             </p>
                         </div>
                     </div>
@@ -120,8 +124,8 @@
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
                             <p class="mb-2"><strong>Apoyar a la dirección del proyecto que se deriva del objeto
-                                contractual, realizando las tareas requeridas desde las dimensiones documental y
-                                administrativa, para el proyecto de (sigue Acueducto de Bogotá).</strong>
+                                    contractual, realizando las tareas requeridas desde las dimensiones documental y
+                                    administrativa, para el proyecto de (sigue Acueducto de Bogotá).</strong>
                             </p>
                         </div>
                     </div>
@@ -131,28 +135,57 @@
     </div>
     <!-- Qualification End -->
     <!-- Footer Start -->
-    <div id="footer-container"></div>
-    <!-- Footer End -->
+    <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5" id="footer">
+        <div class="container">
+            <div class="container text-center py-5">
+                <div class="d-flex justify-content-center mb-2">
+                    <a class="btn btn-light btn-social mr-2"
+                        href="https://www.facebook.com/katalinasilvestre?mibextid=ZbWKwL" target="_blank"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/catalinasilvestre/"
+                        target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-light btn-social mr-2"
+                        href="https://www.instagram.com/kathasgut?igsh=MWhrb2MzaWR2ZHVycg==" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
+                    <a class="btn btn-light btn-social mr-2"
+                        href="https://www.tiktok.com/@katalinasilvestre?_t=8sItff0791y&_r=1" target="_blank"><i
+                            class="fab fa-tiktok"></i></a>
+                </div>
+                <div class="d-flex justify-content-center mb-3">
+                    <a class="text-white" href="#about">Acerca </a>
+                    <span class="px-3">|</span>
+                    <a class="text-white" href="#qualification">Educación</a>
+                    <span class="px-3">|</span>
+                    <a class="text-white" href="#service">Experiencia</a>
+                    <span class="px-3">|</span>
+                    <a class="text-white" href="#skill">Habilidades</a>
+                </div>
+                <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">2024</a>. Todos los derechos
+                    reservados y
+                    diseñado por Catalina Silvestre Gutiérrez</p>
+            </div>
+        </div>
+    </div> <!-- Footer End -->
     <!-- Scroll to Bottom -->
     <i class="fa fa-2x fa-angle-down text-white scroll-to-bottom"></i>
     <!-- Back to Top -->
     <a href="#" class="btn btn-outline-dark px-0 back-to-top"><i class="fa fa-angle-double-up"></i></a>
     <!-- JavaScript Libraries -->
-    <script src="../js/components.js"></script>
+    <script src="../../js/components.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="../lib/typed/typed.min.js"></script>
-    <script src="../lib/easing/easing.min.js"></script>
-    <script src="../lib/waypoints/waypoints.min.js"></script>
-    <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="../lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="../lib/lightbox/js/lightbox.min.js"></script>
+    <script src="../../lib/typed/typed.min.js"></script>
+    <script src="../../lib/easing/easing.min.js"></script>
+    <script src="../../lib/waypoints/waypoints.min.js"></script>
+    <script src="../../lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../../lib/isotope/isotope.pkgd.min.js"></script>
+    <script src="../../lib/lightbox/js/lightbox.min.js"></script>
     <!-- Contact Javascript File -->
-    <script src="../mail/jqBootstrapValidation.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../../mail/jqBootstrapValidation.min.js"></script>
+    <script src="../../js/main.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script src="../js/contact.js"></script>
-    <script src="../js/modal.js"></script>
+    <script src="../../js/contact.js"></script>
+    <script src="../../js/modal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
