--- a/components/works/rappi.html
+++ b/components/works/rappi.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- Libraries Stylesheet -->
-    <link href="../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="../lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="../../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="../../lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <!-- Agregar CSS de Bootstrap en el head -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
@@ -27,13 +27,13 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="plugins/cubeportfolio/css/cubeportfolio.min.css">
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../../css/style.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51">
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
-        <a href="../index.html" class="navbar-brand ml-lg-3">
+        <a href="../../index.html" class="navbar-brand ml-lg-3">
             <h1 class="m-0 display-5"><span class="text-primary">CSG</span>Folio</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -43,24 +43,24 @@
             <div class="navbar-nav m-auto py-0">
                 <a href="#home" class="nav-item nav-link active"></a>
             </div>
-            <a href="../index.html" class="btn btn-outline-primary d-none d-lg-block">Inicio</a>
+            <a href="../../index.html" class="btn btn-outline-primary d-none d-lg-block">Inicio</a>
         </div>
     </nav>
     <!-- Navbar End -->
 
     <!-- Header Start -->
-    <!-- Header Start -->
     <div class="container-fluid bg-primary d-flex align-items-center mb-5 py-5" id="home" style="min-height: 70vh;">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0" style="text-align: center;">
-                    <img class="img-fluid rounded-circle shadow-sm" src="../img/logos/easy-solutions.jpg" alt="">
+                    <img class="img-fluid rounded-circle shadow-sm" src="../../img/logos/rappi.png" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">
                         Experiencia: </h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none"> Pruebas funcionales, Pruebas no funcionales, Aplicaciones antifraude, CrossBrowsing, Pruebas de regresión, Servicios web, Postman, SOAP UI, Pruebas automatizadas, Selenium, Cucumber, Git, Metodologías ágiles</div>
+                    <div class="typed-text d-none">Pruebas funcionales, Plataformas web, Aplicaciones móviles,
+                        Microservicios, Bases de datos,MySQL, Calidad del software, Metodologías ágiles, Scrum</div>
                 </div>
             </div>
         </div>
@@ -69,82 +69,106 @@
     <!-- Qualification Start -->
     <!-- Qualification Start -->
     <div class="container-fluid py-5" id="qualification">
-        <div class="container">
-            <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Knowledge</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Experiencia</h1>
-            </div>
-            <div class="row align-items-center">
-                <div class="col-lg-6">
-                    <h3 class="mb-2">QA TESTER</h3>
-                    <p class="mb-2"><strong>Abr. 2013 | May. 2015</strong></p><br>
-                    <h3>Funciones destacadas:</h3><br>
+        <div class="container-fluid py-5" id="qualification">
+            <div class="container">
+                <h3 class="mb-2">SOFTWARE QA TESTER</h3>
+                <p class="mb-2"><strong>May. 2019 | Oct. 2019</strong></p><br><br>
+                <h3>Funciones destacadas:</h3><br>
+                <div class="row align-items-center">
+                    <div class="col-lg-6"></div>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <p class="mb-2"><strong>Realización de pruebas funcionales y no funcionales en aplicaciones
-                                    antifraude, empleando CrossBrowsing con diferentes navegadores y herramientas como
-                                    JMeter.</strong></p>
+                            <p class="mb-2"><strong>Experiencia sólida en pruebas funcionales para plataformas web y
+                                    móviles, con énfasis en aplicaciones con integraciones complejas.</strong></p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <p class="mb-2"><strong>Ejecución de pruebas de regresión y pruebas de servicios web
-                                    utilizando
-                                    Postman y SOAP UI.</strong></p>
-                        </div>
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute"
-                                style="top: 2px; left: -32px;"></i>
-                            <p class="mb-2"><strong>Experiencia en pruebas automatizadas con Selenium y Cucumber para
-                                    optimizar la eficiencia del proceso.</strong>
+                            <p class="mb-2"><strong>Verificación de estructuras de archivos (JSON, XML, API y
+                                    Microservicios) en bases de datos como MySQL para pruebas de backend. </strong></p>
                             </p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <p class="mb-2"><strong>Uso de herramientas de integración continua como Jenkins y Git para
-                                    garantizar la calidad en el desarrollo.</strong>
+                            <p class="mb-2"><strong>Ejecución exitosa en entornos de producción y desarrollo,
+                                    garantizando la estabilidad y funcionalidad continua de las aplicaciones.</strong>
                             </p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <p class="mb-2"><strong>Desarrollo e implementación de metodologías ágiles, especialmente en
-                                    entornos Scrum.</strong>
-                            </p>
+                            <p class="mb-2"><strong>Ejecución de pruebas smoke, aceptación, productivas, caja negra y
+                                    caja blanca, cubriendo distintos aspectos de la calidad del software.</strong></p>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute"
+                                style="top: 2px; left: -32px;"></i>
+                            <p class="mb-2"><strong>Participación activa en la implementación de metodologías ágiles,
+                                    especialmente Scrum, para mejorar la eficiencia y entrega de proyectos.</strong></p>
                         </div>
                     </div>
+                </div>
+                <div class="col-lg-6">
                 </div>
             </div>
         </div>
     </div>
     <!-- Qualification End -->
     <!-- Footer Start -->
-    <div id="footer-container"></div>
-    <!-- Footer End -->
+    <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5" id="footer">
+        <div class="container">
+            <div class="container text-center py-5">
+                <div class="d-flex justify-content-center mb-2">
+                    <a class="btn btn-light btn-social mr-2"
+                        href="https://www.facebook.com/katalinasilvestre?mibextid=ZbWKwL" target="_blank"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/catalinasilvestre/"
+                        target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-light btn-social mr-2"
+                        href="https://www.instagram.com/kathasgut?igsh=MWhrb2MzaWR2ZHVycg==" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
+                    <a class="btn btn-light btn-social mr-2"
+                        href="https://www.tiktok.com/@katalinasilvestre?_t=8sItff0791y&_r=1" target="_blank"><i
+                            class="fab fa-tiktok"></i></a>
+                </div>
+                <div class="d-flex justify-content-center mb-3">
+                    <a class="text-white" href="#about">Acerca </a>
+                    <span class="px-3">|</span>
+                    <a class="text-white" href="#qualification">Educación</a>
+                    <span class="px-3">|</span>
+                    <a class="text-white" href="#service">Experiencia</a>
+                    <span class="px-3">|</span>
+                    <a class="text-white" href="#skill">Habilidades</a>
+                </div>
+                <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">2024</a>. Todos los derechos
+                    reservados y
+                    diseñado por Catalina Silvestre Gutiérrez</p>
+            </div>
+        </div>
+    </div>    <!-- Footer End -->
     <!-- Scroll to Bottom -->
     <i class="fa fa-2x fa-angle-down text-white scroll-to-bottom"></i>
     <!-- Back to Top -->
     <a href="#" class="btn btn-outline-dark px-0 back-to-top"><i class="fa fa-angle-double-up"></i></a>
     <!-- JavaScript Libraries -->
-    <script src="../js/components.js"></script>
+    <script src="../../js/components.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="../lib/typed/typed.min.js"></script>
-    <script src="../lib/easing/easing.min.js"></script>
-    <script src="../lib/waypoints/waypoints.min.js"></script>
-    <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="../lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="../lib/lightbox/js/lightbox.min.js"></script>
+    <script src="../../lib/typed/typed.min.js"></script>
+    <script src="../../lib/easing/easing.min.js"></script>
+    <script src="../../lib/waypoints/waypoints.min.js"></script>
+    <script src="../../lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../../lib/isotope/isotope.pkgd.min.js"></script>
+    <script src="../../lib/lightbox/js/lightbox.min.js"></script>
     <!-- Contact Javascript File -->
-    <script src="../mail/jqBootstrapValidation.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../../mail/jqBootstrapValidation.min.js"></script>
+    <script src="../../js/main.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script src="../js/contact.js"></script>
-    <script src="../js/modal.js"></script>
+    <script src="../../js/contact.js"></script>
+    <script src="../../js/modal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
