--- a/components/works/tata.html
+++ b/components/works/tata.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <title>CSG - Portafolio</title>
@@ -17,8 +16,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- Libraries Stylesheet -->
-    <link href="../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="../lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="../../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="../../lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <!-- Agregar CSS de Bootstrap en el head -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
@@ -27,13 +26,13 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="plugins/cubeportfolio/css/cubeportfolio.min.css">
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../../css/style.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51">
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
-        <a href="../index.html" class="navbar-brand ml-lg-3">
+        <a href="../../index.html" class="navbar-brand ml-lg-3">
             <h1 class="m-0 display-5"><span class="text-primary">CSG</span>Folio</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -43,7 +42,7 @@
             <div class="navbar-nav m-auto py-0">
                 <a href="#home" class="nav-item nav-link active"></a>
             </div>
-            <a href="../index.html" class="btn btn-outline-primary d-none d-lg-block">Inicio</a>
+            <a href="../../index.html" class="btn btn-outline-primary d-none d-lg-block">Inicio</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -53,7 +52,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0" style="text-align: center;">
-                    <img class="img-fluid rounded-circle shadow-sm" src="../img/logos/Tata.png" alt="">
+                    <img class="img-fluid rounded-circle shadow-sm" src="../../img/logos/Tata.png" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">
@@ -96,28 +95,57 @@
     </div>
     <!-- Qualification End -->
     <!-- Footer Start -->
-    <div id="footer-container"></div>
-    <!-- Footer End -->
+    <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5" id="footer">
+        <div class="container">
+            <div class="container text-center py-5">
+                <div class="d-flex justify-content-center mb-2">
+                    <a class="btn btn-light btn-social mr-2"
+                        href="https://www.facebook.com/katalinasilvestre?mibextid=ZbWKwL" target="_blank"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/catalinasilvestre/"
+                        target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-light btn-social mr-2"
+                        href="https://www.instagram.com/kathasgut?igsh=MWhrb2MzaWR2ZHVycg==" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
+                    <a class="btn btn-light btn-social mr-2"
+                        href="https://www.tiktok.com/@katalinasilvestre?_t=8sItff0791y&_r=1" target="_blank"><i
+                            class="fab fa-tiktok"></i></a>
+                </div>
+                <div class="d-flex justify-content-center mb-3">
+                    <a class="text-white" href="#about">Acerca </a>
+                    <span class="px-3">|</span>
+                    <a class="text-white" href="#qualification">Educación</a>
+                    <span class="px-3">|</span>
+                    <a class="text-white" href="#service">Experiencia</a>
+                    <span class="px-3">|</span>
+                    <a class="text-white" href="#skill">Habilidades</a>
+                </div>
+                <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">2024</a>. Todos los derechos
+                    reservados y
+                    diseñado por Catalina Silvestre Gutiérrez</p>
+            </div>
+        </div>
+    </div>    <!-- Footer End -->
     <!-- Scroll to Bottom -->
     <i class="fa fa-2x fa-angle-down text-white scroll-to-bottom"></i>
     <!-- Back to Top -->
     <a href="#" class="btn btn-outline-dark px-0 back-to-top"><i class="fa fa-angle-double-up"></i></a>
     <!-- JavaScript Libraries -->
-    <script src="../js/components.js"></script>
+    <script src="../../js/components.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="../lib/typed/typed.min.js"></script>
-    <script src="../lib/easing/easing.min.js"></script>
-    <script src="../lib/waypoints/waypoints.min.js"></script>
-    <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="../lib/isotope/isotope.pkgd.min.js"></script>
-    <script src="../lib/lightbox/js/lightbox.min.js"></script>
+    <script src="../../lib/typed/typed.min.js"></script>
+    <script src="../../lib/easing/easing.min.js"></script>
+    <script src="../../lib/waypoints/waypoints.min.js"></script>
+    <script src="../../lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../../lib/isotope/isotope.pkgd.min.js"></script>
+    <script src="../../lib/lightbox/js/lightbox.min.js"></script>
     <!-- Contact Javascript File -->
-    <script src="../mail/jqBootstrapValidation.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../../mail/jqBootstrapValidation.min.js"></script>
+    <script src="../../js/main.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script src="../js/contact.js"></script>
-    <script src="../js/modal.js"></script>
+    <script src="../../js/contact.js"></script>
+    <script src="../../js/modal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
