--- a/components/service.html
+++ b/components/service.html
@@ -11,7 +11,7 @@
                     <i class="fa fa-2x fa-laptop-code"></i>
                     <h4>Su Red</h4>
                     <p>Analista Funcional de Pruebas</p>
-                    <a href="/components/works/sured.html">Leer más</a>
+                    <a href="/components/sured.html">Leer más</a>
                 </div>
             </div>
 
@@ -21,7 +21,7 @@
                     <i class="fa fa-2x fa-edit"></i>
                     <h4>Ingenian Software</h4>
                     <p>Documentadora - Ingeniera de pruebas</p>
-                    <a href="/components/works/ingenian.html">Leer más</a>
+                    <a href="/components/ingenian.html">Leer más</a>
                 </div>
             </div>
 
@@ -31,7 +31,7 @@
                     <i class="fa fa-2x fa-search"></i>
                     <h4>MO Tecnologías</h4>
                     <p>Qa Engineer - Qa Manager</p>
-                    <a href="/components/works/motec.html">Leer más</a>
+                    <a href="/components/motec.html">Leer más</a>
                 </div>
             </div>
 
@@ -41,7 +41,7 @@
                     <i class="fab fa-2x fa-android"></i>
                     <h4>Rappi</h4>
                     <p>Software Qa Tester</p>
-                    <a href="/components/works/rappi.html">Leer más</a>
+                    <a href="/components/rappi.html">Leer más</a>
                 </div>
             </div>
 
@@ -51,7 +51,7 @@
                     <i class="fab fa-2x fa-apple"></i>
                     <h4>Prodigious Latin America</h4>
                     <p>Senior Functional Qa Analyst</p>
-                    <a href="/components/works/prodigious.html">Leer más</a>
+                    <a href="/components/prodigious.html">Leer más</a>
                 </div>
             </div>
 
@@ -61,7 +61,7 @@
                     <i class="fa fa-2x fa-laptop"></i>
                     <h4>Tata Consultancy Services</h4>
                     <p>Senior Tester</p>
-                    <a href="/components/works/tata.html">Leer más</a>
+                    <a href="/components/tata.html">Leer más</a>
                 </div>
             </div>
 
@@ -71,7 +71,7 @@
                     <i class="fa fa-2x fa-laptop-code"></i>
                     <h4>Easy Solutions</h4>
                     <p>Qa Tester</p>
-                    <a href="/components/works/easy.html">Leer más</a>
+                    <a href="/components/easy.html">Leer más</a>
                 </div>
             </div>
         </div>
